# automated-job-application-tracker-skill

./: README.md  pyproject.toml
skills/manual_job_profile/: SKILL.md
skills/manual_job_profile/references/: manual_job_profile.md
skills/organize-job-applications/: SKILL.md
skills/organize-job-applications/agents/: openai.yaml
skills/organize-job-applications/references/: manual_job_profile.md
src/hermes/skills/: __init__.py  manual_job_profile.py
tests/: test_manual_job_profile.py
