[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automated-job-application-tracker-skill"
version = "0.1.0"
description = "Codex skill and CLI for organizing and recording job applications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "DengZhiyuan-math"}]

[project.scripts]
manual-job-profile = "hermes.skills.manual_job_profile:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
